--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,7 +13,7 @@ task:
       name: lang
     isolation:
       container:
-        image: galang8664/aosp:cirrus
+        image: apon77/aosp:cirrus
         cpu: 2
         memory: 4G
 
@@ -53,7 +53,7 @@ task:
       name: lang
     isolation:
       container:
-        image: galang8664/aosp:cirrus
+        image: apon77/aosp:cirrus
         cpu: 24
         memory: 120G
         volumes:
@@ -228,7 +228,7 @@ task:
       name: lang
     isolation:
       container:
-        image: galang8664/aosp:cirrus
+        image: apon77/aosp:cirrus
         cpu: 2
         memory: 4G
 
