--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,11 +6,11 @@ env:
 task:
   name: Test
   skip: $CIRRUS_BRANCH == 'main'
-  only_if: $CIRRUS_REPO_OWNER == 'galang8664'
+  only_if: $CIRRUS_REPO_OWNER == 'ROM-builders'
   timeout_in: 2m
   persistent_worker:
     labels:
-      name: lang
+      name: AX61-2
     isolation:
       container:
         image: apon77/aosp:cirrus
@@ -44,13 +44,13 @@ task:
 task:
   name: Build
   skip: $CIRRUS_BRANCH == 'main'
-  only_if: $CIRRUS_REPO_OWNER == 'galang8664'
+  only_if: $CIRRUS_REPO_OWNER == 'ROM-builders'
   depends_on:
     - Test
   timeout_in: 4h
   persistent_worker:
     labels:
-      name: lang
+      name: AX61-2
     isolation:
       container:
         image: apon77/aosp:cirrus
@@ -218,14 +218,14 @@ task:
 task:
   name: Post Build
   skip: $CIRRUS_BRANCH == 'main'
-  only_if: $CIRRUS_REPO_OWNER == 'galang8664'
+  only_if: $CIRRUS_REPO_OWNER == 'ROM-builders'
   skip_notifications: true
   depends_on:
     - Build
   timeout_in: 2m
   persistent_worker:
     labels:
-      name: lang
+      name: AX61-2
     isolation:
       container:
         image: apon77/aosp:cirrus
