--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,11 +17,12 @@ env: # Environment variables to pass to all tasks
     user_name: "Chatur27"
 
 task:
-    name: aosp # Project name
-    timeout_in: 120m # Otherwise it will timeout at 60m automatically, 120m highest in free account
+  name: Build
   skip: $CIRRUS_BRANCH == 'main'
   only_if: $CIRRUS_REPO_OWNER == 'galang8664'
-  timeout_in: 2m
+  depends_on:
+    - Test
+  timeout_in: 4h
   persistent_worker:
     labels:
       name: lang
