--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,26 +2,39 @@ env: # Environment variables to pass to all tasks
     CIRRUS_CLONE_DEPTH: 1 # No need to clone with the whole history
 
 task:
-  name: aosp
+  name: Test
   skip: $CIRRUS_BRANCH == 'main'
   only_if: $CIRRUS_REPO_OWNER == 'galang8664'
-  timeout_in: 4h
+  timeout_in: 2m
   persistent_worker:
     labels:
       name: lang
-    container:
-      image: apon77/aosp:latest # It has built-in setup environment + repo, aria2, rclone, pigz, username ci, and email ci@ci.ci [You can use your own docker image if you want, or you can use this one too!]
-      cpu: 8  # 8 or less cpu for dummy build, 8 cpu for the final build, 8cpu highest for free accounts. Don't try to use more than 8cpu as free user, you may get blocked by ci.
-      memory: 32G # So that we can have ram when needed, 32G highest. 4G per CPU you use.
-    download_ccache_background_script: # To download ccache in background
-      - ./download_ccache # Ccache download script
-    sync_script: # To sync sources
-      - ./sync # Source sync script
-    monitor_background_script: # To monitor ccache and machine status every minute, runs in background
-      - ./monitor # Monitor script
-    download_out_script:
-      - ./download_out
-    build_script: # Actual build script foreground
-      - ./build # Build script to run
-    upload_final_script:
-      - ./upload_final
+    isolation:
+      container:
+        image: apon77/aosp:cirrus
+        cpu: 2
+        memory: 4G
+
+  env_script:
+    - env
+  show_script:
+    - cat $CIRRUS_WORKING_DIR/build_rom.sh
+  notify_script:
+    - rom_name=$(grep init $CIRRUS_WORKING_DIR/build_rom.sh -m 1 | cut -d / -f 4)
+    - branch_name=$(grep init $CIRRUS_WORKING_DIR/build_rom.sh | awk -F "-b " '{print $2}' | awk '{print $1}')
+    - rom_name=$rom_name-$branch_name
+    - device=$(grep unch $CIRRUS_WORKING_DIR/build_rom.sh -m 1 | cut -d ' ' -f 2 | cut -d _ -f 2 | cut -d - -f 1)
+    - grep _jasmine_sprout $CIRRUS_WORKING_DIR/build_rom.sh > /dev/null && device=jasmine_sprout
+    - grep _laurel_sprout $CIRRUS_WORKING_DIR/build_rom.sh > /dev/null && device=laurel_sprout
+    - grep _GM8_sprout $CIRRUS_WORKING_DIR/build_rom.sh > /dev/null && device=GM8_sprout
+    - grep _maple_dsds $CIRRUS_WORKING_DIR/build_rom.sh > /dev/null && device=maple_dsds
+    - your_telegram_id=@ROM_builders_junk
+    - show=$(cat $CIRRUS_WORKING_DIR/build_rom.sh)
+    - curl -s "https://api.telegram.org/bot${bot_api}/sendmessage" -d "text=<code>$device-$rom_name</code> Started
+      
+      https://cirrus-ci.com/build/$CIRRUS_BUILD_ID
+      
+      $show" -d "chat_id=${your_telegram_id}" -d "parse_mode=HTML"
+  test_script:
+    - set -e
+    - curl -Ls https://raw.githubusercontent.com/ROM-builders/temporary/main/test.sh | bash
