--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,7 +11,7 @@ task:
       name: lang
     isolation:
       container:
-        image: apon77/aosp:cirrus
+        image: apon77/aosp:latest
         cpu: 2
         memory: 4G
 
