--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,17 +17,19 @@ env: # Environment variables to pass to all tasks
     user_name: "Chatur27"
 
 task:
-  name: aosp # Project name
+  name: Test
+  skip: $CIRRUS_BRANCH == 'main'
   only_if: $CIRRUS_REPO_OWNER == 'galang8664'
-  timeout_in: 120m # Otherwise it will timeout at 60m automatically, 120m highest in free account
+  timeout_in: 2m
   persistent_worker:
     labels:
       name: lang
     isolation:
       container:
-        image: apon77/aosp:latest # It has built-in setup environment + repo, aria2, rclone, pigz, username ci, and email ci@ci.ci [You can use your own docker image if you want, or you can use this one too!]
-        cpu: 8  # 8 or less cpu for dummy build, 8 cpu for the final build, 8cpu highest for free accounts. Don't try to use more than 8cpu as free user, you may get blocked by ci.
-        memory: 32G # So that we can have ram when needed, 32G highest. 4G per CPU you use.
+        image: apon77/aosp:latest
+        cpu: 2
+        memory: 4G
+
     download_ccache_background_script: # To download ccache in background
       - ./download_ccache # Ccache download script
     sync_script: # To sync sources
